REGRESSION(r224053): Crash in WebCore::Node::moveTreeToNewScope https://bugs.webkit.org/show_bug.cgi?id=179158

Reviewed by Antti Koivisto.

Call decrementReferencingNodeCount after checking the release assertion
since that could delete oldDocument.

* dom/Node.cpp:
(WebCore::Node::moveTreeToNewScope):


Canonical link: https://commits.webkit.org/195272@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224325 268f45cc-cd09-0410-ab3c-d52691b4dbfc